Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21751

innodb_fast_shutdown=0 can be unnecessarily slow

    XMLWordPrintable

Details

    Description

      Now that MDEV-16264 replaced the InnoDB purge threads with tasks, it should be possible to increase the purge effort during a slow shutdown (while innodb_fast_shutdown=0 is in effect). Currently, we are using the fixed amount of innodb_purge_threads also during shutdown, even if the server were mostly idle.

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              marko Marko Mäkelä
              Votes:
              1 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.