MDEV-21751 innodb_fast_shutdown=0 can be unnecessarily slow

max out parallel purge worker tasks, on slow shutdown, to speedup